tests/errors/infer_mode_conflict_01.f90
program infer_mode_conflict_01
end program infer_mode_conflict_01
